tests/neg/i11648.scala
class A {
  object B { b => // error

  }
}